--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -1,3 +1,5 @@
+@import "react-day-picker/dist/style.css";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -120,5 +122,6 @@ All colors MUST be HSL.
   body {
     @apply bg-white text-gray-900; /* sementara pake warna built-in */
   }
+  
 }
 
